force-app/main/default/objects/Agentforce_Config__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client_ID</label>
    <type>TextArea</type>
</CustomField>