force-app/main/default/objects/Agentforce_Config__mdt/fields/Telegram_Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Bot_Token__c</fullName>
    <label>Telegram_Bot_Token</label>
    <type>TextArea</type>
</CustomField>